src/test/rustdoc-ui/automatic-links.stderr
error: Unneeded long form for URL
  --> $DIR/automatic-links.rs:3:5
   |
LL | /// [http://a.com](http://a.com)
   |     ^^^^^^^^^^^^^^^^^^^^^^^^^^^^
   |
note: the lint level is defined here
  --> $DIR/automatic-links.rs:1:9
   |
LL | #![deny(automatic_links)]
   |         ^^^^^^^^^^^^^^^
   = help: Try with `<http://a.com>` instead

error: Unneeded long form for URL
  --> $DIR/automatic-links.rs:5:5
   |
LL | /// [http://b.com]
   |     ^^^^^^^^^^^^^^
   |
   = help: Try with `<http://b.com>` instead

error: aborting due to 2 previous errors

